Fixed manifest file path

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="apple-touch-icon" sizes="180x180" href="web/assets/img/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="web/assets/img/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="web/assets/img/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
+        <link rel="manifest" href="web/assets/img/site.webmanifest">
 
         <meta property="og:title" content="How to build an API workshop | Albert Suarez">
         <meta property="og:site_name" content="How to build an API workshop">
