Added some things to the frontend

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
         <link rel="stylesheet" type="text/css" href="web/assets/css/styles.css">
 
+        <!--Fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
+
         <!--3rd party libraries-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link 
@@ -37,7 +40,31 @@
 
     <body>
 
-        <h1>How to build an API workshop</h1>
+        <div class="vertical-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col col-12 text-center">
+                        <h1>How to build an API workshop</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col col-12 text-center github">
+                        <a class="github-button" target="_blank" href="https://github.com/AlbertSuarez" 
+                            data-size="large" data-show-count="true" aria-label="Follow @AlbertSuarez on GitHub">
+                            Follow
+                        </a>
+                        <a class="github-button" href="https://github.com/AlbertSuarez/build-api-workshop" 
+                            data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star AlbertSuarez/build-api-workshop on GitHub">
+                            Star
+                        </a>
+                        <a class="github-button" href="https://github.com/AlbertSuarez/build-api-workshop/fork" 
+                            data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork AlbertSuarez/build-api-workshop on GitHub">
+                            Fork
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <script src="web/assets/js/main.js"></script>
 
@@ -51,6 +78,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     </body>
 
