Added hits count

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             </div>
         </div>
 
+        <img src="http://hits.dwyl.io/AlbertSuarez/build-api-workshop.svg" hidden></img>
+
         <script src="web/assets/js/main.js"></script>
 
         <!--3rd party libraries-->
