--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                     </div>
                 </div>
                 <form id="apiForm">
-                    <div class="form-group row col-lg-5 col-md-7 col-sm-9 auto-center">
+                    <div class="form-group row col-lg-7 col-md-9 col-sm-12 auto-center">
                         <input type="number" class="form-control" id="portInput" placeholder="Port (i.e. 8080)">
                     </div>
-                    <div class="form-group row col-lg-5 col-md-7 col-sm-9 auto-center">
+                    <div class="form-group row col-lg-7 col-md-9 col-sm-12 auto-center">
                         <input class="form-control" id="endpointInput" placeholder="Endpoint (i.e. /companies)">
                     </div>
-                    <div class="form-group row col-lg-5 col-md-7 col-sm-9 auto-center">
+                    <div class="form-group row col-lg-7 col-md-9 col-sm-12 auto-center">
                         <select class="form-control" id="methodInput" placeholder="Method">
                             <option>GET</option>
                             <option>PUT</option>
@@ -79,8 +79,11 @@
                             <option>DELETE</option>
                         </select>
                     </div>
-                    <div class="form-group row col-lg-5 col-md-7 col-sm-9 auto-center">
-                        <button type="submit" class="btn form-control">Submit</button>
+                    <div class="form-group row col-lg-7 col-md-9 col-sm-12 auto-center">
+                        <input class="form-control" id="requestBodyInput" placeholder='Request body (i.e. {"param": "value"}) - optional'>
+                    </div>
+                    <div class="form-group row col-lg-7 col-md-9 col-sm-12 auto-center">
+                        <a class="btn form-control">Submit</a>
                     </div>
                 </form>
                 <div class="row">
